<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Grey"

    android:fitsSystemWindows="true"
    tools:context=".ui.activities.MainActivity"
    android:elevation="8dp">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:elevation="5dp">

        <com.arlib.floatingsearchview.FloatingSearchView
            android:id="@+id/floating_search_view"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            app:floatingSearch_searchBarMarginLeft="@dimen/search_view_inset"
            app:floatingSearch_searchBarMarginTop="@dimen/search_view_inset"
            app:floatingSearch_searchBarMarginRight="@dimen/search_view_inset"
            app:floatingSearch_searchHint="Search..."
            app:floatingSearch_suggestionsListAnimDuration="250"
            app:floatingSearch_showSearchKey="false"
            app:floatingSearch_leftActionMode="showSearch"
            app:floatingSearch_menu="@menu/menu_search"
            app:floatingSearch_close_search_on_keyboard_dismiss="true"/>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp">

            <android.support.design.widget.TabItem
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@mipmap/ic_home_white"
                android:text="@string/acceuil" />

            <android.support.design.widget.TabItem
                android:id="@+id/cinema"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@mipmap/cinema"
                android:text="@string/cinema" />

            <android.support.design.widget.TabItem
                android:id="@+id/movies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@mipmap/series"
                android:text="@string/serie" />

            <android.support.design.widget.TabItem
                android:id="@+id/series"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@mipmap/persons"
                android:text="actors" />

            <android.support.design.widget.TabItem
                android:id="@+id/actors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@mipmap/ic_favorite"
                android:text="@string/fun" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</android.support.design.widget.CoordinatorLayout>
