<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activities.MovieDetailActivity"
    android:background="@color/Grey"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        app:titleTextColor="#ffffff"
        app:navigationIcon="@mipmap/ic_back"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/picturePersonneDetail"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:scaleType="fitXY"
                 />

            <TextView
                android:id="@+id/actorNameDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text=""
                android:theme="@style/title" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nb_saisontitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_naissance"
                    android:theme="@style/director" />

                <TextView
                    android:id="@+id/birthdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text=""
                    android:theme="@style/grade" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nb_"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lieu_naissance"
                    android:theme="@style/director" />

                <TextView
                    android:id="@+id/birthplace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text=""
                    android:theme="@style/grade" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/pop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pop"
                    android:theme="@style/director" />

                <TextView
                    android:id="@+id/poularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text=""
                    android:theme="@style/grade" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/rateResultPerson"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="3dp">

                    <TextView
                        android:id="@+id/ratePerson"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textColor="#ffffff"
                        android:textSize="9pt"/>
                    TextView
                        android:theme="@style/directorName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-2dp"
                        android:layout_marginLeft="1dp"
                        android:text="/10"/>

                </LinearLayout>


            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/bio"
                android:theme="@style/title" />

            <TextView
                android:id="@+id/bibliographie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="#B3ffffff"
                android:theme="@style/details" />

            <android.support.design.widget.TabLayout
                android:id="@+id/Personnetabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:elevation="4dp"
                android:theme="@style/AppTheme.AppBarOverlay">

                <android.support.design.widget.TabItem
                    android:id="@+id/filmographie"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filmo" />


            </android.support.design.widget.TabLayout>

            <android.support.v4.view.ViewPager
                android:id="@+id/PersonneContainer"
                android:layout_width="match_parent"
                android:layout_height="510dp"
                android:background="@color/black" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
