<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activities.SaisonsDetailActivity"

    android:orientation="vertical"
    android:background="@color/Grey">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat"
        app:popupTheme="@style/ThemeOverlay.AppCompat"
        app:titleTextColor="#ffffff"
        app:navigationIcon="@mipmap/ic_back"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <VideoView
                    android:id="@+id/bande_annonce_saison"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:fitsSystemWindows="true"
                    android:layout_gravity="center_horizontal"
                    app:layout_collapseMode="parallax"/>
            </FrameLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="32dp">

                <ImageView
                    android:id="@+id/picturesaison"
                    android:layout_width="110dp"
                    android:layout_height="180dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="-32dp"
                    android:elevation="8dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/guardians_galaxy" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/title_saison_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Guardians of the Galaxy"
                        android:theme="@style/title" />

                    <TextView
                        android:id="@+id/details_saison"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Action, Adventure, Fantasy"
                        android:theme="@style/details" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="16dp">

                        <com.iarcuschin.simpleratingbar.SimpleRatingBar
                            android:id="@+id/rating_saison"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="6dp"
                            android:padding="16dp"
                            android:layout_marginBottom="16dp"
                            android:clickable="true"
                            app:srb_starSize="16dp"

                            app:srb_numberOfStars="5"
                            app:srb_rating="3"
                            app:srb_stepSize="0.5"
                            app:srb_starBorderWidth="1"
                            app:srb_borderColor="@color/stars"
                            app:srb_drawBorderEnabled="false"
                            app:srb_starBackgroundColor="@color/stars"
                            app:srb_fillColor="@color/bordo"/>

                        <Button
                            android:id="@+id/submit_saison"
                            android:layout_below="@+id/ratingbutton"
                            android:theme="@style/ButtonRate"
                            android:layout_width="64dp"
                            android:layout_height="32dp"
                            android:layout_marginTop="14dp"
                            android:onClick="rateMe_saison"
                            android:text="@string/evaluer"
                            />



                        <LinearLayout
                            android:id="@+id/rateResult_saison"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginTop="14dp"
                            android:layout_marginLeft="4dp">

                            <TextView
                                android:id="@+id/rate_saison"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="8.9"
                                android:textColor="#ffffff"
                                android:textSize="9pt"/>
                            <TextView
                                android:theme="@style/directorName"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="-2dp"
                                android:layout_marginLeft="1dp"
                                android:text="/5"/>

                        </LinearLayout>



                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/storyline"
                android:theme="@style/title" />

            <TextView
                android:id="@+id/storyLine_saison"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Before she was Wonder Woman, she was Diana, princess of the Amazons, trained warrior. When a pilot crashes and tells of conflict in the outside world, she leaves home to fight a war, discovering her full powers and true destiny."
                android:textColor="#B3ffffff"
                android:theme="@style/details" />

            <android.support.design.widget.TabLayout
                android:id="@+id/Saisontabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:elevation="4dp"
                android:theme="@style/AppTheme.AppBarOverlay">

                <android.support.design.widget.TabItem
                    android:id="@+id/episode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/episodes" />

                <android.support.design.widget.TabItem
                    android:id="@+id/actor_saison"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acteur" />

                <android.support.design.widget.TabItem
                    android:id="@+id/Comments_saison"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/commentaire" />
            </android.support.design.widget.TabLayout>

            <android.support.v4.view.ViewPager
                android:id="@+id/saisonContainer"
                android:layout_width="match_parent"
                android:layout_height="510dp"
                android:background="@color/black" />
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>



